stripping to minimum

--- a/src/_includes/sidebar.html
+++ b/src/_includes/sidebar.html
@@ -25,8 +25,8 @@
       {% endif %}
     {% endfor %}
 
-    <a class="sidebar-nav-item" href="https://github.com/sondr3/generator-jekyllized">Jekyllized on Github</a>
-    <a class="sidebar-nav-item" href="https://github.com/poole">Poole on Github</a>
+    <!--a class="sidebar-nav-item" href="https://github.com/sondr3/generator-jekyllized">Jekyllized on Github</a>
+    <a class="sidebar-nav-item" href="https://github.com/poole">Poole on Github</a-->
     <span class="sidebar-nav-item">Run by <a href="https://twitter.com/{{ site.owner.twitter}}">@{{ site.owner.name }}<a/></span>
   </nav>
 
