--- a/src/_includes/sidebar.html
+++ b/src/_includes/sidebar.html
@@ -19,7 +19,7 @@
     {% assign pages_list = site.pages %}
     {% for node in pages_list %}
       {% if node.title != null %}
-        {% if node.layout == "page" %}
+        {% if node.layout == "page" or node.layout == "leanpage" %}
           <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url }}">{{ node.title }}</a>
         {% endif %}
       {% endif %}
@@ -27,7 +27,7 @@
 
     <!--a class="sidebar-nav-item" href="https://github.com/sondr3/generator-jekyllized">Jekyllized on Github</a>
     <a class="sidebar-nav-item" href="https://github.com/poole">Poole on Github</a-->
-    <span class="sidebar-nav-item">Run by <a href="https://twitter.com/{{ site.owner.twitter}}">@{{ site.owner.name }}<a/></span>
+    <!--span class="sidebar-nav-item">Tweets <a href="https://twitter.com/{{ site.owner.twitter}}">@{{ site.owner.name }}<a/></span-->
   </nav>
 
   <div class="sidebar-item">
