--- a/src/_layouts/post.html
+++ b/src/_layouts/post.html
@@ -17,7 +17,7 @@ layout: default
         <h3>
           <a href="{{ post.url }}">
             {{ post.title }}
-            <small>{{ post.date | date_to_string }}</small>
+            <small>{{ post.date | date: "%b %-d, %Y" }}</small>
           </a>
         </h3>
       </li>
