--- a/src/assets/scss/virdi.scss
+++ b/src/assets/scss/virdi.scss
@@ -39,3 +39,22 @@ $on-laptop:        800px;
   border-bottom: 1px solid #eee;
   border-top: 5px solid $grey-color-dark;
 }
+
+.recent-posts-header {
+  margin-bottom: 0;
+  font-size: 24px;
+}
+
+#recent-posts {
+  padding-top: 0;
+}
+
+#recent-posts, #recent-projects {
+  width: 50%;
+  float: left;
+}
+
+ul.archive {
+  list-style-type: none;
+  margin-left: 0px;
+}
